---
source: minijinja/tests/test_parser.rs
description: "{% include \"foo.txt\" %}\n{% include \"foo.txt\" with context %}\n{% include \"foo.txt\" without context %}\n{% include \"foo.txt\" ignore missing with context %}\n{% include \"foo.txt\" ignore missing without context %}\n{% include \"foo.txt\" ignore missing %}"
input_file: minijinja/tests/parser-inputs/include.txt
---
Ok(
    Template {
        children: [
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 1:11-1:20,
                ignore_missing: false,
            } @ 1:3-1:20,
            EmitRaw {
                raw: "\n",
            } @ 1:23-2:0,
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 2:11-2:20,
                ignore_missing: false,
            } @ 2:3-2:33,
            EmitRaw {
                raw: "\n",
            } @ 2:36-3:0,
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 3:11-3:20,
                ignore_missing: false,
            } @ 3:3-3:36,
            EmitRaw {
                raw: "\n",
            } @ 3:39-4:0,
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 4:11-4:20,
                ignore_missing: true,
            } @ 4:3-4:48,
            EmitRaw {
                raw: "\n",
            } @ 4:51-5:0,
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 5:11-5:20,
                ignore_missing: true,
            } @ 5:3-5:51,
            EmitRaw {
                raw: "\n",
            } @ 5:54-6:0,
            Include {
                name: Const {
                    value: 'foo.txt',
                } @ 6:11-6:20,
                ignore_missing: true,
            } @ 6:3-6:35,
        ],
    } @ 0:0-6:38,
)
